# body-height-estimator

./: README.md  pyproject.toml  pyproject.toml__
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: body_height.yaml
configs/experiment/: example_cpu.yaml  example_gpu.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: wandb.yaml
configs/model/: body_height.yaml
data/Manifest/: test.jsonp  train.jsonp  valid.jsonp
scripts/: train.sh
src/: preprocess.py  train.py
src/data/: datamodule.py  manifest.py
src/data/components/: augmentor.py  datasets.py
src/models/: mnist_module.py  module.py
src/models/components/: resnet.py  senet.py  simple_dense_net.py
src/preprocess/: depth_generate.py  mask_generate.py  pose_generate.py
src/preprocess_utils/: depth_generate.py  mask_generate.py  pose_generate.py
